<resources>
    <string name="app_name">Where is Wally</string>
    <string name="app_title">Where\'s Wally?</string>
    <string name="img_logo_bottom">Wally head</string>
    <string name="img_logo_top">Where\'s Wally logo</string>
    <string name="btn_open_camera">Open camera</string>
    <string name="btn_load_image">Load image</string>
    <string name="btn_find_wally">Find Wally</string>
    <string name="btn_cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="img_find_wally">Input/output image preview</string>
    <string name="txt_loading">Searching Wally...</string>
    <string name="stats">Statistics</string>
    <string name="btn_mask">Mask</string>
    <string name="number_of_parallel_tasks">Number of parallel tasks</string>
    <string name="use_gpu_acceleration">Use GPU acceleration</string>
    <string name="default_parallel_tasks_number">1</string>
</resources>