<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4ec4ce"
    tools:context=".MainActivity">

    <ImageView
        app:srcCompat="@drawable/title"
        android:contentDescription="@string/img_logo_top"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1.5"
        android:layout_marginTop="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="24dp"
        android:paddingHorizontal="48dp">

        <Button
            android:id="@+id/btn_open_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_open_camera" />

        <Button
            android:id="@+id/btn_load_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_load_image" />

    </LinearLayout>

    <ImageView
        app:srcCompat="@drawable/wally_bottom"
        android:contentDescription="@string/img_logo_bottom"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="0.6" />

</LinearLayout>